@@ -45,6 +45,7 @@ Changes in 2.8
 - Detect IP behind Proxy in HackingLog.fnc.php & User.php
 - Linkify Portal Polls options in PortalPollsNotes.fnc.php
 - Use Colorbox only for Portal Notes EMBED links in PortalPollsNotes.fnc.php
+- check if student already enrolled on that date when updating START_DATE in Enrollment.inc.php & AssignOtherInfo.php
 
 Upgrade from 2.7.x
 ------------------
